<resources>
    <string name="app_name">AndroidApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="daily_fuel_amount">Daily Fuel Amount</string>
    <string name="change_car">Change Car</string>
    <string name="daily_km_amount">Daily KM Amount</string>
    <string name="change_driver">Change Driver</string>
</resources>
